# TCache

./: .gitignore  ChangeLog.md  README  README.md  TCache.cabal  buildDemos.sh  cleanTCacheData.sh  package.yaml
Data/: TCache.hs  TCache.transact.hs
Data/Persistent/: Collection.hs  IDynamic.hs
Data/TCache/: DefaultDefs.hs  DefaultPersistence.hs  Defs.hs  IResource.hs  IndexQuery.hs  IndexText.hs  Memoization.hs  Triggers.hs
TCacheData/: I54321
TCacheData - copia/: Queue#boss1  Queue#boss2
cacheData/: 1  100  102  103  104  105  106  11  114  115  116  117  118  12  120  122  124  127  134  135  136  138  139  140  141  142  144  147  148  149  150  151  158  159  16  160  163  164  167  168  (+69 more)
demos/: DBRef.hs  DynamicSample.hs  basicSample.hs  caching.hs  indexQuery.hs  indexText.hs  memoization.hs  pr.hi  pr.hs  pushpop.hs  testnewdbref.hs  triggerRelational.lhs  weakTest.hs
demos/.tcachedata/: Emp1  Emp2  Emp3  Emp4  Queue#hi  U12345  hola  mycompany  ops
demos/TCacheData/: Index User[Char]
demos/TCacheData/Workflow/: Running
demos/TCacheData/Workflow/Stat/count/: 0  void
demos/cacheData/: 10  101  107  108  109  110  111  112  113  119  121  123  125  126  128  129  13  130  131  132  133  137  14  143  145  146  15  152  153  154  155  156  157  161  162  165  166  169  17  172  (+51 more)
unfinished/: CollectionStream.hs
