name: TCache
version: 0.13.2
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: agocorona@gmail.com
synopsis: A Transactional cache with user-defined persistence
description: TCache is a transactional cache with configurable persistence. It allows conventional
             STM transactions for objects that synchronize  with their user-defined storages.
             State in memory and into permanent storage is transactionally coherent.
             .
             It has interface defined for Amazon WS and Yesod Persistent backends defined in tcache-\<backend\>
             packages.
             Persistent is a multi-backend interface for SQL and non SQL databases such in Mongo-db
             .
             The package implements serializable STM references, access by key and by record field value, triggers,
             full text and field indexation, default serialization and a query language based on record fields
             .
             Since the STM references can be included in data structures and serialized, this is right
             for graph databases and other NoSQL databases.
             .
             0.12.0 space in index data in indexQuery.hs and IndexText.hs triggered errors in the AWS backend.
             The space has been changed by \'-\'. So rename the "index *" files in the TCache folder
             in order to be recognized.
             .
             0.11.0.0 added setIndexParsist to define persistence for indexes by type. started the addition of readDBRefs, readResources and so on for simultaneous read, writes and deletes of
             objects of the same type.
             .
             0.10.2.0 Added setDefaultPersist and modified the signature of setPersist in Data.TCache.DefaultPersistence.
             Fixed issues with ghc 7.6.3
             .
             0.10  version add memoization and a persistent and transactional collection/queue.
             .
             0.10.0.8 subversion add cachedByKeySTM
             .
             0.10.0.9 fixed an error in clearSyncCacheProc and SynWrite Asynchronous that checked the cache continuously
             .
             See "Data.TCache" for details
             .
             In this release:
             .
             Dropped Data.Hashtable (deprecated). Now it uses the package hashtables

-- This file has been generated from package.yaml by hpack version 0.31.1.
--
-- see: https://github.com/sol/hpack
--
-- hash: 27ba4712998e8aa6b478c4583801336d311f66632b4a2fbb36f9b29c91b160ff

name:           TCache
version:        0.13.0.0
synopsis:       A Transactional cache with user-defined persistence
description:    Please see the README on GitHub at <https://github.com/agocorona/TCache#readme>
category:       Data, Database
homepage:       https://github.com/agocorona/TCache#readme
bug-reports:    https://github.com/agocorona/TCache/issues
author:         Alberto Gómez Corona
maintainer:     agocorona@gmail.com
copyright:      2019 Alberto Gómez Corona
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md
    demos/basicSample.hs
    demos/caching.hs
    demos/DBRef.hs
    demos/DynamicSample.hs
    demos/indexQuery.hs
    demos/indexText.hs
    demos/memoization.hs
    demos/pr.hs
    demos/pushpop.hs
    demos/testnewdbref.hs
    demos/triggerRelational.lhs
    demos/weakTest.hs
    Data/Persistent/IDynamic.hs

source-repository head
  type: git
  location: https://github.com/agocorona/TCache

library
  exposed-modules:
      Data.TCache
      Data.TCache.DefaultPersistence
      Data.TCache.Defs
      Data.TCache.IResource
      Data.TCache.IndexQuery
      Data.TCache.IndexText
      Data.TCache.Memoization
      Data.TCache.Triggers
      Data.Persistent.Collection
      Data.Persistent.IDynamic
  other-modules:
      Paths_TCache
  hs-source-dirs:
      ./.
  ghc-options: -Wall -Wcompat -Widentities
  build-depends:
      RefSerialize
    , base >=4.7 && <5
    , bytestring
    , containers >=0.1.0.1
    , directory >=1.0
    , hashtables
    , mtl
    , old-time >=1.0
    , stm
    , text
  default-language: Haskell2010

test-suite caching
  type: exitcode-stdio-1.0
  main-is: caching.hs
  other-modules:
      Paths_TCache
  hs-source-dirs:
      test/caching
  ghc-options: -Wall -Wcompat -Widentities -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      RefSerialize
    , TCache
    , base >=4.7 && <5
    , bytestring
    , containers >=0.1.0.1
    , directory >=1.0
    , hashtables
    , mtl
    , old-time >=1.0
    , stm
    , text
  default-language: Haskell2010
