name:           TCache
version:        0.13.2
cabal-version: >= 1.8
synopsis:       A Transactional cache with user-defined persistence
description:    Please see the README on GitHub at <https://github.com/agocorona/TCache#readme>
category:       Data, Database
homepage:       https://github.com/agocorona/TCache#readme
bug-reports:    https://github.com/agocorona/TCache/issues
author:         Alberto Gómez Corona
maintainer:     agocorona@gmail.com
copyright:      2019 Alberto Gómez Corona
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md
    demos/basicSample.hs
    demos/caching.hs
    demos/DBRef.hs
    demos/DynamicSample.hs
    demos/indexQuery.hs
    demos/indexText.hs
    demos/memoization.hs
    demos/pr.hs
    demos/pushpop.hs
    demos/testnewdbref.hs
    demos/triggerRelational.lhs
    demos/weakTest.hs
    Data/Persistent/IDynamic.hs

source-repository head
  type: git
  location: https://github.com/agocorona/TCache

library
  exposed-modules:
      Data.TCache
      Data.TCache.DefaultPersistence
      Data.TCache.Defs
      Data.TCache.IResource
      Data.TCache.IndexQuery
      Data.TCache.IndexText
      Data.TCache.Memoization
      Data.TCache.Triggers
      Data.Persistent.Collection
      Data.Persistent.IDynamic
  other-modules:
      Paths_TCache
  hs-source-dirs:
      ./.
  ghc-options: -Wall -Wcompat -Widentities
  build-depends:
      RefSerialize
    , base >=4.7 && <5
    , bytestring
    , containers >=0.1.0.1
    , directory >=1.0
    , hashtables
    , mtl
    , old-time >=1.0
    , stm
    , text
  default-language: Haskell2010

test-suite caching
  type: exitcode-stdio-1.0
  main-is: caching.hs
  other-modules:
      Paths_TCache
  hs-source-dirs:
      demos
  ghc-options: -Wall -Wcompat -Widentities -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      RefSerialize
    , TCache
    , base >=4.7 && <5
    , bytestring
    , containers >=0.1.0.1
    , directory >=1.0
    , hashtables
    , mtl
    , old-time >=1.0
    , stm
    , text
  default-language: Haskell2010
